--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,3 +1,2 @@
 <p>home works!</p>
-
-<button mat-raised-button color="primary" (click)="treeButtonClick()">Go to the trees</button>
+<button mat-raised-button color="primary" (click)="treeBtnClick()">Go to the Trees</button>
