--- a/client/src/app/tree/tree.component.html
+++ b/client/src/app/tree/tree.component.html
@@ -1,1 +1,4 @@
-<app-type-selection></app-type-selection>
+<app-type-selection
+        (typeSelected)="typeSelectionChanged($event)">
+</app-type-selection>
+<app-tree-list [selectedTreeType]="selectedType" *ngIf="selectedType !== null"></app-tree-list>
