--- a/client/src/app/tree/tree-list/tree-list.component.html
+++ b/client/src/app/tree/tree-list/tree-list.component.html
@@ -1,1 +1,3 @@
 <app-tree-display *ngFor="let treeId of treeIds" [treeId]="treeId" [type]="selectedTreeType"></app-tree-display>
+
+<mat-error *ngIf="!treeIds">no trees were found for the requested type</mat-error>
